# soil_smart_measurements

./: .gitignore  .gitmodules  README.md
gateway/: CMakeLists.txt  sdkconfig.defaults
gateway/components/Modbus/: CMakeLists.txt
gateway/main/: CMakeLists.txt  app_firebase.cpp  app_firebase.h  app_rf.cpp  app_rf.h  app_wm.cpp  app_wm.h  main.h  main_project.cpp
node/: CMakeLists.txt  ndefault.csv  sdkconfig.defaults
node/components/ArduinoJson/: CMakeLists.txt
node/components/ESP32Time/: CMakeLists.txt
node/components/IOXhop_FirebaseESP32/: CMakeLists.txt
node/components/RF24/: CMakeLists.txt
node/components/RF24/.github/workflows/: doxygen.yml
node/components/RTClib/: CMakeLists.txt
node/main/: CMakeLists.txt  app_modbus.cpp  app_modbus.h  app_rf.cpp  app_rf.h  app_rtc.cpp  app_rtc.h  app_sd.cpp  app_sd.h  app_webserver_idf.cpp  app_webserver_idf.h  app_wifi.cpp  app_wifi.h  credentials.cpp  credentials.h  main.h  main_project.cpp
node/main/web/: index.2ee2a97a.js  index.2ee4243c.css  index.html  index2.html  ota.html
